fontとmacroフォルダを修正

--- a/sakura.ini
+++ b/sakura.ini
@@ -16,7 +16,7 @@ _GREPFOLDER_Counts=0
 
 [Folders]
 szIMPORTFOLDER=C:\mydesk\program\
-szMACROFOLDER=C:\mydesk\program\sakura\macro\
+szMACROFOLDER=\macro\
 
 [Cmd]
 nCmdArrNum=0
@@ -197,8 +197,8 @@ nTimeFormatType=0
 nVertLineOffset=-1
 nWinPosX=-2147483648
 nWinPosY=0
-nWinSizeCX=1280
-nWinSizeCY=1020
+nWinSizeCX=1177
+nWinSizeCY=641
 nWinSizeType=0
 rcCompareDialog=0,0,0,0
 rcDiffDialog=0,0,0,0
@@ -557,9 +557,9 @@ szCMN[24]=
 
 [Font]
 bFontIs_FIXED_PITCH=1
-lf=-13,0,0,0,400,0,0,0,128,3,2,1,49
-lfFaceName=ＭＳ ゴシック
-nPointSize=101
+lf=-13,0,0,0,400,0,0,0,0,3,2,1,49
+lfFaceName=Consolas
+nPointSize=100
 
 [KeyBind]
 KeyBind[000]=0100,30400,30400,30400,30400,30400,30400,30400,30400,ダブルクリック
