bakup場所を変更

--- a/sakura.ini
+++ b/sakura.ini
@@ -78,7 +78,7 @@ bConvertEOLPaste=0
 bCopyAndDisablSelection=0
 bDispExitingDialog=0
 bDispFUNCKEYWND=0
-bDispMiniMap=1
+bDispMiniMap=0
 bDispSTATUSBAR=1
 bDispTOOLBAR=0
 bDispTabClose=1
@@ -197,15 +197,15 @@ nTimeFormatType=0
 nVertLineOffset=-1
 nWinPosX=-2147483648
 nWinPosY=0
-nWinSizeCX=1177
-nWinSizeCY=641
+nWinSizeCX=790
+nWinSizeCY=598
 nWinSizeType=0
 rcCompareDialog=0,0,0,0
 rcDiffDialog=0,0,0,0
 rcFavoriteDialog=0,0,0,0
 rcOpenDialog=307,391,1536,1371
 rcTagJumpDialog=0,0,0,0
-szBackUpFolder=C:\mydesk\sakura.bakup\
+szBackUpFolder=C:\mydesk\program\sakura.bakup\
 szBackUpPathAdvanced=$0_%Y%m%d.*
 szDateFormat=yyyy'年'M'月'd'日('dddd')'
 szExtHelp=
