改行タブ削除マクロ追加

--- a/sakura.ini
+++ b/sakura.ini
@@ -407,29 +407,30 @@ bCMPOP[24]=1
 nCMIF[00][00]=31605
 nCMIF[00][01]=31603
 nCMIF[00][02]=31600
-nCMIF[00][03]=31602
-nCMIF[00][04]=31607
-nCMIF[00][05]=0
-nCMIF[00][06]=31601
-nCMIF[00][07]=31606
-nCMIF[00][08]=31604
-nCMIF[00][09]=0
-nCMIF[00][10]=30210
-nCMIF[00][11]=30211
-nCMIF[00][12]=0
-nCMIF[00][13]=30601
-nCMIF[00][14]=30602
-nCMIF[00][15]=30604
-nCMIF[00][16]=30221
-nCMIF[00][17]=0
-nCMIF[00][18]=30401
-nCMIF[00][19]=30610
-nCMIF[00][20]=0
-nCMIF[00][21]=30940
-nCMIF[00][22]=30941
-nCMIF[00][23]=0
-nCMIF[00][24]=30620
-nCMIF[00][25]=30190
+nCMIF[00][03]=31608
+nCMIF[00][04]=31602
+nCMIF[00][05]=31607
+nCMIF[00][06]=0
+nCMIF[00][07]=31601
+nCMIF[00][08]=31606
+nCMIF[00][09]=31604
+nCMIF[00][10]=0
+nCMIF[00][11]=30210
+nCMIF[00][12]=30211
+nCMIF[00][13]=0
+nCMIF[00][14]=30601
+nCMIF[00][15]=30602
+nCMIF[00][16]=30604
+nCMIF[00][17]=30221
+nCMIF[00][18]=0
+nCMIF[00][19]=30401
+nCMIF[00][20]=30610
+nCMIF[00][21]=0
+nCMIF[00][22]=30940
+nCMIF[00][23]=30941
+nCMIF[00][24]=0
+nCMIF[00][25]=30620
+nCMIF[00][26]=30190
 nCMIF[01][00]=30102
 nCMIF[01][01]=30103
 nCMIF[01][02]=31340
@@ -464,22 +465,23 @@ nCMIK[00][06]=
 nCMIK[00][07]=
 nCMIK[00][08]=
 nCMIK[00][09]=
-nCMIK[00][10]=U
-nCMIK[00][11]=R
-nCMIK[00][12]=
-nCMIK[00][13]=T
-nCMIK[00][14]=C
-nCMIK[00][15]=P
-nCMIK[00][16]=D
-nCMIK[00][17]=
-nCMIK[00][18]=A
-nCMIK[00][19]=@
-nCMIK[00][20]=
-nCMIK[00][21]=G
-nCMIK[00][22]=B
-nCMIK[00][23]=
-nCMIK[00][24]=\
-nCMIK[00][25]=F
+nCMIK[00][10]=
+nCMIK[00][11]=U
+nCMIK[00][12]=R
+nCMIK[00][13]=
+nCMIK[00][14]=T
+nCMIK[00][15]=C
+nCMIK[00][16]=P
+nCMIK[00][17]=D
+nCMIK[00][18]=
+nCMIK[00][19]=A
+nCMIK[00][20]=@
+nCMIK[00][21]=
+nCMIK[00][22]=G
+nCMIK[00][23]=B
+nCMIK[00][24]=
+nCMIK[00][25]=\
+nCMIK[00][26]=F
 nCMIK[01][00]=O
 nCMIK[01][01]=S
 nCMIK[01][02]=N
@@ -504,7 +506,7 @@ nCMIK[24][13]=1
 nCMIK[24][14]=E
 nCMIK[24][15]=X
 nCMIK[24][16]=V
-nCMIN[00]=26
+nCMIN[00]=27
 nCMIN[01]=7
 nCMIN[02]=0
 nCMIN[03]=0
@@ -4402,7 +4404,8 @@ File[004]=open_clip_board_path.js
 File[005]=open_folder.js
 File[006]=ScratchPad.js
 File[007]=show_color.js
-Name[000]=jsコード整形
+File[008]=exclusion_tab_linebreak.js
+Name[000]=コード整形
 Name[001]=html閉じタグ挿入
 Name[002]=Google翻訳
 Name[003]=アプリで開く
@@ -4410,6 +4413,7 @@ Name[004]=クリップボード実行
 Name[005]=現在フォルダを開く
 Name[006]=ScratchPad.js
 Name[007]=カラーコード確認
+Name[008]=改行タブ削除
 ReloadWhenExecute[000]=1
 ReloadWhenExecute[001]=1
 ReloadWhenExecute[002]=1
@@ -4418,6 +4422,7 @@ ReloadWhenExecute[004]=1
 ReloadWhenExecute[005]=1
 ReloadWhenExecute[006]=1
 ReloadWhenExecute[007]=1
+ReloadWhenExecute[008]=1
 nMacroCancelTimer=10
 nMacroOnOpened=-1
 nMacroOnSave=-1
