--- a/sakura.ini
+++ b/sakura.ini
@@ -4405,7 +4405,7 @@ File[005]=open_folder.js
 File[006]=ScratchPad.js
 File[007]=show_color.js
 File[008]=exclusion_tab_linebreak.js
-Name[000]=コード整形
+Name[000]=js,css,html整形
 Name[001]=html閉じタグ挿入
 Name[002]=Google翻訳
 Name[003]=アプリで開く
