背景画像設定

--- a/sakura.ini
+++ b/sakura.ini
@@ -969,14 +969,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -1131,14 +1131,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=1
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -1291,14 +1291,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -1451,14 +1451,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -1611,14 +1611,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -1775,14 +1775,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -1935,14 +1935,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -2095,14 +2095,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -2255,14 +2255,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -2415,14 +2415,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -2575,14 +2575,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -2735,14 +2735,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -2895,14 +2895,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -3055,14 +3055,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -3215,14 +3215,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -3375,14 +3375,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -3535,14 +3535,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=1
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -3712,14 +3712,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=1
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -3872,14 +3872,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=1
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -4033,14 +4033,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=1
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
@@ -4193,14 +4193,14 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=
-bgImgPos=0
+bgImgPath=my_config\bg.png
+bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
-bgImgRepeartX=1
-bgImgRepeartY=1
-bgImgScrollX=1
-bgImgScrollY=1
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=2
