ダブルクリックでハイライトする機能を追加

--- a/sakura.ini
+++ b/sakura.ini
@@ -564,7 +564,7 @@ lfFaceName=Consolas
 nPointSize=100
 
 [KeyBind]
-KeyBind[000]=0100,30400,30400,30400,30400,30400,30400,30400,30400,ダブルクリック
+KeyBind[000]=0100,31609,30400,30400,30400,30400,30400,30400,30400,ダブルクリック
 KeyBind[001]=0101,31580,31580,31580,31580,0,0,0,0,右クリック
 KeyBind[002]=0102,30384,0,0,0,0,0,0,0,中クリック
 KeyBind[003]=0103,31605,0,0,0,0,0,0,0,左サイドクリック
@@ -4405,6 +4405,7 @@ File[005]=open_folder.js
 File[006]=ScratchPad.js
 File[007]=show_color.js
 File[008]=exclusion_tab_linebreak.js
+File[009]=highlight.mac
 Name[000]=js,css,html整形
 Name[001]=html閉じタグ挿入
 Name[002]=Google翻訳
@@ -4414,6 +4415,7 @@ Name[005]=現在フォルダを開く
 Name[006]=ScratchPad.js
 Name[007]=カラーコード確認
 Name[008]=改行タブ削除
+Name[009]=クリックハイライト
 ReloadWhenExecute[000]=1
 ReloadWhenExecute[001]=1
 ReloadWhenExecute[002]=1
@@ -4423,6 +4425,7 @@ ReloadWhenExecute[005]=1
 ReloadWhenExecute[006]=1
 ReloadWhenExecute[007]=1
 ReloadWhenExecute[008]=1
+ReloadWhenExecute[009]=1
 nMacroCancelTimer=10
 nMacroOnOpened=-1
 nMacroOnSave=-1
