--- a/sakura.ini
+++ b/sakura.ini
@@ -969,7 +969,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -1131,7 +1131,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=1
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -1291,7 +1291,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -1451,7 +1451,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -1611,7 +1611,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -1775,7 +1775,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -1935,7 +1935,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -2095,7 +2095,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -2255,7 +2255,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -2415,7 +2415,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -2575,7 +2575,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -2735,7 +2735,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -2895,7 +2895,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -3055,7 +3055,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -3215,7 +3215,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -3375,7 +3375,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -3535,7 +3535,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=1
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -3712,7 +3712,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=1
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -3872,7 +3872,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=1
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -4033,7 +4033,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=1
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
@@ -4193,7 +4193,7 @@ bUseKeyHelpPrefix=0
 bUseKeyWordHelp=0
 bUseRegexKeyword=0
 bUseTypeFont=0
-bgImgPath=my_config\bg.png
+bgImgPath=my_config\bg.bmp
 bgImgPos=3
 bgImgPosOffsetX=0
 bgImgPosOffsetY=0
