改行色を修正

--- a/sakura.ini
+++ b/sakura.ini
@@ -884,7 +884,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
@@ -1044,7 +1044,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
@@ -1206,7 +1206,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
@@ -1366,7 +1366,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
@@ -1526,7 +1526,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
@@ -1690,7 +1690,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
@@ -1850,7 +1850,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
@@ -2010,7 +2010,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
@@ -2170,7 +2170,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
@@ -2330,7 +2330,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
@@ -2490,7 +2490,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
@@ -2650,7 +2650,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
@@ -2810,7 +2810,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
@@ -2970,7 +2970,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
@@ -3130,7 +3130,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
@@ -3290,7 +3290,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
@@ -4441,7 +4441,7 @@ C[DFC]=1,0,006f00,c0fdbd,0
 C[DFD]=1,0,006ad5,ace9ff,0
 C[EBK]=0,0,000000,f3f3f3,0
 C[EOF]=1,0,ffff00,000000,0
-C[EOL]=1,0,ff8000,f0fbff,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
 C[FN2]=1,0,000000,ffffa0,0
 C[FN3]=1,0,000000,99ff99,0
 C[FN4]=1,0,000000,9999ff,0
