markdown.rule修正、追加

--- a/sakura.ini
+++ b/sakura.ini
@@ -149,7 +149,7 @@ bUseCompotibleBMP=1
 bUseOLE_DragDrop=1
 bUseOLE_DropSource=1
 eOpenDialogDir=0
-eOutlineDockSide=0
+eOutlineDockSide=1
 eTabPosition=0
 khlf=-12,0,0,0,400,0,0,0,1,0,0,0,0
 khlfFaceName=Yu Gothic UI
@@ -4259,7 +4259,7 @@ szKinsokuTail=
 szLineComment=
 szLineComment2=
 szLineComment3=
-szOutlineRuleFilename=markdown.rule
+szOutlineRuleFilename=my_config\markdown.rule
 szTabViewString=^       
 szTypeExts=md,markdown
 szTypeName=Markdown
