--- a/sakura.ini
+++ b/sakura.ini
@@ -116,7 +116,7 @@ bNewWindow=0
 bNoFilterSaveFile=1
 bNoFilterSaveNew=1
 bNotOverWriteCRLF=1
-bOutlineDockDisp=0
+bOutlineDockDisp=1
 bOutlineDockSync=1
 bOverWriteBoxDelete=0
 bOverWriteFixMode=0
@@ -149,7 +149,7 @@ bUseCompotibleBMP=1
 bUseOLE_DragDrop=1
 bUseOLE_DropSource=1
 eOpenDialogDir=0
-eOutlineDockSide=1
+eOutlineDockSide=2
 eTabPosition=0
 khlf=-12,0,0,0,400,0,0,0,1,0,0,0,0
 khlfFaceName=Yu Gothic UI
@@ -180,7 +180,7 @@ nMiniMapFontSize=-1
 nMiniMapQuality=3
 nMiniMapWidth=150
 nOPENFOLDERArrNum_MAX=30
-nOutlineDockSet=0
+nOutlineDockSet=1
 nPageScrollByWheel=0
 nRepeatedScrollLineNum=3
 nRepeatedScroll_Smooth=0
@@ -225,7 +225,7 @@ szWinCaptionActive=${w?$h$:アウトプット$:${I?$f$n$:$N$n$}$}${U?(更新)$} 
 szWinCaptionInactive=${w?$h$:アウトプット$:$f$n$}${U?(更新)$} - $A $V ${R?(ビューモード)$:(上書き禁止)$}${M?  【キーマクロの記録中】$} $<profile>
 wTrayMenuHotKeyCode=0
 wTrayMenuHotKeyMods=0
-xyOutlineDock=0,0,0,0
+xyOutlineDock=0,357,0,0
 
 [Plugin]
 EnablePlugin=0
@@ -650,12 +650,12 @@ KeyBind[082]=0057,0,0,30400,0,0,0,31143,0,W
 KeyBind[083]=0058,0,0,30601,0,0,0,31141,0,X
 KeyBind[084]=0059,0,0,30211,0,0,0,0,0,Y
 KeyBind[085]=005a,0,0,30210,0,0,0,0,0,Z
-KeyBind[086]=00bd,0,0,30622,31310,0,0,0,0,-
+KeyBind[086]=00bd,0,0,31123,31310,0,0,0,0,-
 KeyBind[087]=00de,0,0,30621,0,0,0,0,0,^(英語')
 KeyBind[088]=00dc,0,0,30620,31311,0,0,0,0,\
 KeyBind[089]=00c0,0,0,30610,0,0,0,0,0,@(英語`)
 KeyBind[090]=00db,0,0,30960,0,0,0,0,0,[
-KeyBind[091]=00bb,0,0,0,31312,30790,0,0,0,;
+KeyBind[091]=00bb,0,0,0,31122,30790,0,0,0,;
 KeyBind[092]=00ba,0,0,30612,0,30791,0,0,0,:
 KeyBind[093]=00dd,0,0,30960,0,0,0,0,0,]
 KeyBind[094]=00bc,0,0,0,0,0,0,0,0,,
@@ -867,7 +867,7 @@ m_bTagJumpICase=0
 nDiffFlgOpt=0
 nExecFlgOpt=1
 nTagsOpt=0
-nTypesCount=23
+nTypesCount=24
 szTagsCmdLine=
 szVersion=2.3.0.0
 vStructureVersion=168
@@ -4272,6 +4272,170 @@ C[CBK]=0,0,000000,80ffff,0
 C[CMT]=1,0,008000,f0fbff,0
 C[CTL]=1,0,00ffff,f0fbff,0
 C[CVL]=0,0,ff8080,f0fbff,0
+C[DFA]=0,0,000000,f0fbff,0
+C[DFC]=0,0,000000,f0fbff,0
+C[DFD]=0,0,000000,f0fbff,0
+C[EBK]=0,0,000000,f3f3f3,0
+C[EOF]=1,0,ffff00,000000,0
+C[EOL]=1,0,c0c0c0,f0fbff,0
+C[FN2]=1,0,000000,ffffa0,0
+C[FN3]=1,0,000000,99ff99,0
+C[FN4]=1,0,000000,9999ff,0
+C[FN5]=1,0,000000,ff66ff,0
+C[FND]=1,0,000000,00ffff,0
+C[HDC]=0,0,400080,f0fbff,0
+C[IME]=1,0,0000ff,f0fbff,0
+C[KW1]=1,0,ff0000,f0fbff,0
+C[KW2]=1,0,0080ff,f0fbff,0
+C[KW3]=1,0,0080ff,f0fbff,0
+C[KW4]=1,0,0080ff,f0fbff,0
+C[KW5]=1,0,0080ff,f0fbff,0
+C[KW6]=1,0,0080ff,f0fbff,0
+C[KW7]=1,0,0080ff,f0fbff,0
+C[KW8]=1,0,0080ff,f0fbff,0
+C[KW9]=1,0,0080ff,f0fbff,0
+C[KWA]=1,0,0080ff,f0fbff,0
+C[LNO]=1,0,ff0000,efefef,0
+C[MOD]=1,1,ff0000,efefef,0
+C[MRK]=1,0,f0fbff,c08000,0
+C[NOT]=0,0,ffc0c0,f0fbff,0
+C[NUM]=0,0,0000eb,f0fbff,0
+C[PGV]=1,0,f0fbff,ffe6be,0
+C[RAP]=1,0,ff00ff,f0fbff,0
+C[RK1]=1,0,ffffff,0000ff,0
+C[RK2]=1,0,ffffff,323232,0
+C[RK3]=1,0,ffffff,7d7d7d,0
+C[RK4]=1,0,ffffff,c8c8c8,0
+C[RK5]=0,0,ff0000,f0fbff,0
+C[RK6]=0,0,ff0000,f0fbff,0
+C[RK7]=0,0,ff0000,f0fbff,0
+C[RK8]=0,0,ff0000,f0fbff,0
+C[RK9]=0,0,ff0000,f0fbff,0
+C[RKA]=1,0,ff0000,f0fbff,0
+C[RUL]=1,0,000000,efefef,0
+C[SEL]=1,0,c56a31,c56a31,0
+C[SPC]=0,0,c0c0c0,f0fbff,0
+C[SQT]=1,0,808040,f0fbff,0
+C[TAB]=0,0,c0c0c0,f0fbff,0
+C[TXT]=1,0,000000,f0fbff,0
+C[UND]=1,0,ff0000,f0fbff,0
+C[URL]=1,0,ff0000,f0fbff,1
+C[VER]=0,0,c0c0c0,f0fbff,0
+C[WQT]=1,0,400080,f0fbff,0
+C[ZEN]=1,0,c0c0c0,f0fbff,0
+FileTree(0).bIgnoreHidden=1
+FileTree(0).bIgnoreReadOny=0
+FileTree(0).bIgnoreSystem=0
+FileTree(0).eItemType=0
+FileTree(0).nDepth=0
+FileTree(0).szTargetFile=*.*
+FileTree(0).szTargetPath=.
+RxKey[000]=RK4,/####.*./k
+RxKey[001]=RK3,/###.*./k
+RxKey[002]=RK2,/##.*./k
+RxKey[003]=RK1,/^#.*./k
+bAutoIndent=1
+bAutoIndent_ZENSPACE=1
+bChkEnterAtEnd=1
+bDefaultBom=1
+bFileTreeProject=1
+bHokanLoHiCase=0
+bIndentCppCommentIgnore=1
+bIndentCppStringIgnore=1
+bIndentCppUndoSep=0
+bInsSpace=0
+bKinsokuHead=0
+bKinsokuHide=0
+bKinsokuKuto=0
+bKinsokuRet=0
+bKinsokuTail=0
+bOutlineDockDisp=1
+bOutlineSortDesc=0
+bPriorCesu8=0
+bRTrimPrevLine=0
+bStringEndLine=0
+bStringLineOnly=0
+bTabArrow=0
+bTypeHtmlHelpIsSingle=1
+bUseDocumentIcon=0
+bUseHokanByFile=0
+bUseHokanByKeyword=0
+bUseKeyHelpAllSearch=0
+bUseKeyHelpKeyDisp=0
+bUseKeyHelpPrefix=0
+bUseKeyWordHelp=0
+bUseRegexKeyword=1
+bUseTypeFont=0
+bgImgPath=my_config\bg.bmp
+bgImgPos=3
+bgImgPosOffsetX=0
+bgImgPosOffsetY=0
+bgImgRepeartX=0
+bgImgRepeartY=0
+bgImgScrollX=0
+bgImgScrollY=0
+cLineTermChar=:
+eDefaultCodetype=4
+eDefaultEoltype=1
+eOutlineDockSide=3
+id=148707751
+lf=0,0,0,0,0,0,0,0,0,0,0,0,0
+lfFaceName=
+nDefaultOutline=12
+nDockOutline=12
+nFileTreeItemCount=1
+nHokanType=0
+nImeState=0
+nIndentLayout=0
+nInts=21,10240,0,2,-1,-1,0,1,1,0,0,0
+nKeywordSelect10=-1
+nKeywordSelect3=-1
+nKeywordSelect4=-1
+nKeywordSelect5=-1
+nKeywordSelect6=-1
+nKeywordSelect7=-1
+nKeywordSelect8=-1
+nKeywordSelect9=-1
+nLineCommentColumn=-1
+nLineCommentColumn2=-1
+nLineCommentColumn3=-1
+nLineNumWidth=2
+nLineSpace=1
+nNoteLineOffset=0
+nOutlineSortCol=0
+nOutlineSortType=0
+nPointSize=0
+nSmartIndent=0
+nTextWrapMethod=0
+nVertLineIdx1=0
+szBlockCommentFrom=<!--
+szBlockCommentFrom2=
+szBlockCommentTo=-->
+szBlockCommentTo2=
+szExtHelp=
+szExtHtmlHelp=
+szFileTreeProjectIni=
+szHokanFile=
+szIndentChars=
+szKinsokuHead=
+szKinsokuKuto=、。，．､｡,.
+szKinsokuTail=
+szLineComment=
+szLineComment2=
+szLineComment3=
+szOutlineRuleFilename=my_config\mmtxt.rule
+szTabViewString=|       
+szTypeExts=mmtxt
+szTypeName=MarkdownText
+xyOutlineDock=470,0,501,0
+
+[Types(22)]
+C[BRC]=0,1,000080,f0fbff,0
+C[CAR]=1,0,000000,f0fbff,0
+C[CBK]=0,0,000000,80ffff,0
+C[CMT]=1,0,008000,f0fbff,0
+C[CTL]=1,0,00ffff,f0fbff,0
+C[CVL]=0,0,ff8080,f0fbff,0
 C[DFA]=0,0,000000,ffff80,0
 C[DFC]=0,0,ffffff,575757,0
 C[DFD]=0,0,000000,8080ff,0
@@ -4387,7 +4551,7 @@ nFileTreeItemCount=1
 nHokanType=0
 nImeState=0
 nIndentLayout=0
-nInts=21,10240,0,4,1,19,0,1,1,0,0,0
+nInts=22,10240,0,4,1,19,0,1,1,0,0,0
 nKeywordSelect10=-1
 nKeywordSelect3=-1
 nKeywordSelect4=-1
@@ -4429,7 +4593,7 @@ szTypeExts=diff
 szTypeName=Diff
 xyOutlineDock=0,0,0,0
 
-[Types(22)]
+[Types(23)]
 C[BRC]=0,1,000080,f0fbff,0
 C[CAR]=1,0,000000,f0fbff,0
 C[CBK]=0,0,000000,80ffff,0
@@ -4547,7 +4711,7 @@ nFileTreeItemCount=1
 nHokanType=0
 nImeState=0
 nIndentLayout=0
-nInts=22,10240,0,4,-1,-1,0,1,1,0,0,0
+nInts=23,10240,0,4,-1,-1,0,1,1,0,0,0
 nKeywordSelect10=-1
 nKeywordSelect3=-1
 nKeywordSelect4=-1
