mmtxtの設定変更

--- a/my_config/MarkdownText.ini
+++ b/my_config/MarkdownText.ini
@@ -41,7 +41,7 @@ C[RK1]=1,0,ffffff,0000ff,0
 C[RK2]=1,0,ffffff,323232,0
 C[RK3]=1,0,ffffff,7d7d7d,0
 C[RK4]=1,0,ffffff,c8c8c8,0
-C[RK5]=0,0,ff0000,f0fbff,0
+C[RK5]=1,0,ff0000,e6e6e6,0
 C[RK6]=0,0,ff0000,f0fbff,0
 C[RK7]=0,0,ff0000,f0fbff,0
 C[RK8]=0,0,ff0000,f0fbff,0
@@ -51,7 +51,7 @@ C[RUL]=1,0,000000,efefef,0
 C[SEL]=1,0,c56a31,c56a31,0
 C[SPC]=0,0,c0c0c0,f0fbff,0
 C[SQT]=1,0,808040,f0fbff,0
-C[TAB]=0,0,c0c0c0,f0fbff,0
+C[TAB]=0,0,e6e6e6,f0fbff,0
 C[TXT]=1,0,000000,f0fbff,0
 C[UND]=1,0,ff0000,f0fbff,0
 C[URL]=1,0,ff0000,f0fbff,1
@@ -69,6 +69,7 @@ RxKey[000]=RK4,/####.*./k
 RxKey[001]=RK3,/###.*./k
 RxKey[002]=RK2,/##.*./k
 RxKey[003]=RK1,/^#.*./k
+RxKey[004]=RK5,/  /k
 bAutoIndent=1
 bAutoIndent_ZENSPACE=1
 bChkEnterAtEnd=1
@@ -84,7 +85,7 @@ bKinsokuHide=0
 bKinsokuKuto=0
 bKinsokuRet=0
 bKinsokuTail=0
-bOutlineDockDisp=0
+bOutlineDockDisp=1
 bOutlineSortDesc=0
 bPriorCesu8=0
 bRTrimPrevLine=0
@@ -112,12 +113,12 @@ bgImgScrollY=0
 cLineTermChar=:
 eDefaultCodetype=4
 eDefaultEoltype=1
-eOutlineDockSide=0
+eOutlineDockSide=3
 id=148707751
 lf=0,0,0,0,0,0,0,0,0,0,0,0,0
 lfFaceName=
 nDefaultOutline=12
-nDockOutline=0
+nDockOutline=12
 nFileTreeItemCount=1
 nHokanType=0
 nImeState=0
@@ -162,7 +163,7 @@ szOutlineRuleFilename=my_config\mmtxt.rule
 szTabViewString=|       
 szTypeExts=mmtxt
 szTypeName=MarkdownText
-xyOutlineDock=0,0,0,0
+xyOutlineDock=470,0,339,0
 
 [Info]
 szVersion=2.3.0.0
